# precommit

./: .pre-commit-config.yaml  flake8_example.py  long_function.py  pyproject.toml
html/: interrogate_example.html
