[tool.poetry]
name = "project-folder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
